--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.2.1",
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
         "bootstrap": "^5.2.2"
     }
 }
