--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "prettier": "2.7.1",
         "tailwindcss": "^3.2.1",
         "vite": "^3.0.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
-        "bootstrap": "^5.2.2"
+        "bootstrap": "^5.2.2",
+        "jquery": "^3.6.1"
     }
 }
