--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "prettier": "2.7.1",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "bootstrap": "^5.2.2",
-        "jquery": "^3.6.1"
+        "jquery": "^3.6.1",
+        "popper.js": "^1.16.1"
     }
 }
