--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
+        "@headlessui/react": "^1.7.5",
+        "@heroicons/react": "^2.0.13",
         "bootstrap": "^5.2.2",
         "jquery": "^3.6.1",
         "popper.js": "^1.16.1"
